# socket-library

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: develop.yml  master.yml
include/sockslib/: resolve.hpp  socket.hpp  utils.hpp
src/: socket.cpp  socket_linux.cpp  socket_macos.cpp  socket_windows.cpp
src/linux/: resolve.cpp  socket.cpp  utils.cpp
src/macos/: resolve.cpp  socket.cpp  utils.cpp
src/windows/: resolve.cpp  socket.cpp  utils.cpp
test/: test_resolve.cpp  test_socket.cpp  test_utils.cpp
